--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<object data="https:neopets.com" width="800" height="600"> <embed src="https://neopets.com" width="900" height="500"> </embed></object>
+<object data="https://neopets.com" width="800" height="600"> <embed src="https://neopets.com" width="900" height="500"> </embed></object>
 
 
 
