--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<object data="https://allnurses.com" width="800" height="600"> <embed src="https://allnurses.com" width="900" height="500"> </embed></object>
+<object data="https://calpoly.com" width="800" height="600"> <embed src="https://colpoly.com" width="900" height="500"> </embed></object>
 
 
 
@@ -24,4 +24,3 @@ getLocalStream();
 
 
 </script>
-
